ESCHERpy module completely isolated
Module documentation with Sphinx
testing with nosetests (escherDB by now is tested)
templates separated from source in the templates module
camera pos changed
tests moved to examples
a escherpy TODO
critic2 and orca new modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *pdf
 *png
+*jpg
 *gif
 *tags
 *.db
@@ -7,19 +8,42 @@
 # workaround camera placement with g3dviewer
 tools/
 
-#--------------------
+#-----------------------------------------
 # test/ directory
-#--------------------
+#-----------------------------------------
 *.obj
 *.off
 *.coff
 *.dat
 *.gnu
+#-----------------------------------------
+# escherpy/test/ directory
+#-----------------------------------------
+escherpy/tests/cover/
+
+#-----------------------------------------
+# escherpy/examples/ directory
+#-----------------------------------------
 *.mtl
 *.pov
 *.wrl
 *.oogl
 *.bpy
+*.cube
+*.incritic
+*.outcritic
+*.xyz
+*.gbw
+*.ges
+*.wfn
+*.scfp
+*.inp
+
+#-------------------------
+# escherpy/doc/ directory
+#-------------------------
+
+escherpy/doc/docs/
 
 #--------------------
 # doc/ directory
