--- a/.gitignore
+++ b/.gitignore
@@ -5,107 +5,7 @@
 *tags
 *.db
 
-# icon
-!icon/*png
-
-# workaround camera placement with g3dviewer
-tools/
-
-#-----------------------------------------
-# test/ directory
-#-----------------------------------------
-*.obj
-*.off
-*.coff
-*.dat
-*.gnu
-#-----------------------------------------
-# escherpy/test/ directory
-#-----------------------------------------
-escherpy/tests/cover/
-
-#-----------------------------------------
-# escherpy/examples/ directory
-#-----------------------------------------
-*.mtl
-*.pov
-*.wrl
-*.oogl
-*.bpy
-*.cube
-*.incritic
-*.outcritic
-*.xyz
-*.gbw
-*.ges
-*.wfn
-*.scfp
-*.inp
-
-#-------------------------
-# escherpy/doc/ directory
-#-------------------------
-
-escherpy/doc/docs/
-
-#--------------------
-# doc/ directory
-#--------------------
-
-*.aux
-*.log
-*.out
-*.toc
-
-chem-2.0
-
-##################################
-# Specific Python ignore patterns
-##################################
-
-*.py[cod]
-
-
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-escherpy/MANIFEST
-
-###################
-Vim files
-###################
-
-*.swp
-
+doc/*.aux
+doc/*.log
+doc/*.out
+doc/*.toc
